--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,7 +22,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Crawler with python
       run: |
-        python "crawler.py"
+        python "news크롤링_sample.py"
     - name: Commits
       run: |
         git config --local user.email "hiyellowme@nongshim.co.kr"
